# 2026-Global-AI-Hackathon-Series-with-Qwen-Cloud

./: .dockerignore  .env.example  .gitignore  BENCHMARK.md  Deep-research-token.md  Dockerfile  LICENSE  QWEN-해커톤-요건.txt  README.md  docker-compose.yml  pyproject.toml
Cleansing-2026-07/: 01_CASE_STUDY.md  02_DECISION_LEDGER.md  03_0_1_100_GAP_ANALYSIS.md  04_AI_NATIVE_PRODUCT_OS.md  05_PROMPT_LIBRARY.md  06_EVIDENCE_REGISTER.md  README.md
bench/: questions.txt  results.json  results.md  run_ab.py
deploy/: Caddyfile  cloud-approval.schema.json  continue-quarantined-restart-proof.py  deploy.sh  finalize-release.py  infrastructure-readiness.schema.json  inspect-infrastructure.py  release-finalization.schema.json  release-gate.schema.json  release-manifest.schema.json  rollback.sh  scan-secrets.py  setup.sh  verify-cloud-approval.py  verify-release-gate.py  verify-restart-persistence.sh
docs/: REPORT.html
eval/: .gitignore  README.md  __init__.py  attestation.py  attestation.schema.json  baselines.py  contracts.py  evaluate.py  generate.py  policy.json  private-paired-results.schema.json  private_promotion.py  run.py  scenarios.py
proof/: Dockerfile.live  live_qwen_contract.py
scripts/: preflight.ps1
submission/: DEVPOST_TEMPLATE.md  HACKATHON_CONTRACT.md  VIDEO_SCRIPT.md  account-credit-audit.json  architecture.mmd  evidence-manifest.json  hackathon-contract.json
tests/: __init__.py  support.py  test_cloud_approval.py  test_config.py  test_demo_ui.py  test_explain.py  test_forget.py  test_ingest.py  test_llm.py  test_main.py  test_mcp_iac_contract.py  (+7 more)
(+44 files in other folders)
