[project]
name = "librarian"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "mcp>=1.28.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = false
